force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/PS_STDNT_CAR_MLSTN__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/11IsW_TdM3PF0AE1Tlll4EhwF8fGEl9rM1CyTZlxEREQ/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_STDNT_CAR_MLSTNs</externalName>
    <label>Academic Milestone (external)</label>
    <pluralLabel>Academic Milestone (external)</pluralLabel>
</CustomObject>