force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/ACAD_PLAN__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PLAN__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.ACAD_PLAN</description>
    <externalDeveloperName>ACAD_PLAN</externalDeveloperName>
    <label>Academic Plan</label>
    <length>25</length>
    <referenceTargetField>Plan__c.Plan_Code__c</referenceTargetField>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Academic Milestone (external)</relationshipLabel>
    <relationshipName>Academic_Milestone_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>