force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/ACAD_PROG__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PROG__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.ACAD_PROG</description>
    <externalDeveloperName>ACAD_PROG</externalDeveloperName>
    <label>Academic Program</label>
    <length>4</length>
    <referenceTargetField>Program__c.Program_Code__c</referenceTargetField>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Academic Milestone (external)</relationshipLabel>
    <relationshipName>Academic_Milestone_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>