force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/ANTICIPATED_TERM__c.field-meta.xml
<CustomField>
    <fullName>ANTICIPATED_TERM__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.ANTICIPATED_TERM</description>
    <externalDeveloperName>ANTICIPATED_TERM</externalDeveloperName>
    <label>Anticipated Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Academic Milestone (external)</relationshipLabel>
    <relationshipName>Academic_Milestone_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>