force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/DATE_COMPLETED__c.field-meta.xml
<CustomField>
    <fullName>DATE_COMPLETED__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.DATE_COMPLETED</description>
    <externalDeveloperName>DATE_COMPLETED</externalDeveloperName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>