force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/DESCR__c.field-meta.xml
<CustomField>
    <fullName>DESCR__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.DESCR</description>
    <externalDeveloperName>DESCR</externalDeveloperName>
    <label>Milestone Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>