force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/DESCRFORMAL__c.field-meta.xml
<CustomField>
    <fullName>DESCRFORMAL__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.DESCRFORMAL</description>
    <externalDeveloperName>DESCRFORMAL</externalDeveloperName>
    <label>Milestone Formal Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>