force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/EFFDT__c.field-meta.xml
<CustomField>
    <fullName>EFFDT__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.EFFDT</description>
    <externalDeveloperName>EFFDT</externalDeveloperName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>