force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Academic Milestone (external)</relationshipLabel>
    <relationshipName>Academic_Milestone_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>