force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/MILESTONE__c.field-meta.xml
<CustomField>
    <fullName>MILESTONE__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.MILESTONE</description>
    <externalDeveloperName>MILESTONE</externalDeveloperName>
    <label>Milestone Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>