force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/MILESTONE_COMPLETE__c.field-meta.xml
<CustomField>
    <fullName>MILESTONE_COMPLETE__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.MILESTONE_COMPLETE</description>
    <externalDeveloperName>MILESTONE_COMPLETE</externalDeveloperName>
    <label>Milestone Completed</label>
    <length>1</length>
    <type>Text</type>
</CustomField>