force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/MILESTONE_NBR__c.field-meta.xml
<CustomField>
    <fullName>MILESTONE_NBR__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.MILESTONE_NBR</description>
    <externalDeveloperName>MILESTONE_NBR</externalDeveloperName>
    <label>Milestone Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>