force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/MILESTONE_TITLE__c.field-meta.xml
<CustomField>
    <fullName>MILESTONE_TITLE__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.MILESTONE_TITLE</description>
    <externalDeveloperName>MILESTONE_TITLE</externalDeveloperName>
    <label>Milestone Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>