force-app/main/default/objects/PS_STDNT_CAR_MLSTN__x/fields/TERM_REQUIRED__c.field-meta.xml
<CustomField>
    <fullName>TERM_REQUIRED__c</fullName>
    <description>Data sourced from PS_STDNT_CAR_MLSTN.TERM_REQUIRED</description>
    <externalDeveloperName>TERM_REQUIRED</externalDeveloperName>
    <label>Term Required</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Academic Milestone (external)</relationshipLabel>
    <relationshipName>Academic_Milestone_external1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>